# chrome-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  background.js  benchmark_harness.py  bridge.py  bridge_policy.example.json  bridge_tokens.txt.example  bridge_wake.py  broker.py  com.automation.bridge.json.template  deploy.sh  extension_identity.py  manifest.json  setup-broker.sh  setup-rs.sh  setup.sh  test_client.py  uninstall-broker.sh  usage_telemetry.py  verify_agent_actions_live.py  verify_benchmark_harness.py  verify_brand_shell_behavior.mjs  verify_brand_shell_contract.py  verify_bridge.py  verify_broker_contract.py  verify_capability_matrix.py  verify_cli_contract.py  verify_github_attachment_contract.py  verify_guardrails_contract.py  verify_heartbeat_contract.py  verify_install_contract.py  verify_keepalive_contract.py  verify_lease_contract.py  verify_lease_stress_contract.py  verify_live_install_smoke.py  verify_mcp_contract.py  verify_moat_contract.py  (+7 more)
.github/workflows/: ci.yml  release.yml
adapters/browser_use/: README.md  chrome_bridge_session.py  example_agent.py
docs/: benchmarks.md  commands.md  mcp.md  multi-agent.md  rust-host.md  security.md  setup.md  telemetry.md  verification.md
examples/: README.md  handoff_demo.py
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
host-rs/: Cargo.toml
mcp/: claude_desktop_config.example.json  pyproject.toml
mcp/chrome_bridge_mcp/: __init__.py  identity.py  server.py  transport.py
scripts/: background_reliability.py  diagnose_install.py  package_release.py
(+5 files in other folders)
